Fix pagination overflowing on smaller screens

--- a/public/css/logixRelease.css
+++ b/public/css/logixRelease.css
@@ -100,3 +100,28 @@ img{
     display: flex;
     width: 100%;
 }
+
+.pagination .page-link {
+    white-space: nowrap;
+}
+
+@media (max-width: 992px) {
+    .pagination-cont {
+        overflow-x: auto;
+        padding: 0;
+    }
+
+    .pagination {
+        overflow-x: visible;
+        max-width: none;
+        display: block;
+        padding: 0;
+        white-space: nowrap;
+    }
+
+    .pagination > * {
+        display: inline-block;
+        margin: 0;
+        margin-left: -4px;
+    }
+}
