--- a/public/css/search.css
+++ b/public/css/search.css
@@ -1,9 +1,3 @@
-.pagination{
-    display: flex;
-    justify-content: center;
-    margin: 30px;
-}
-
 .results-head {
     margin: 2rem 1rem 0 1.60rem;
 }
